--- a/application/modules/default/views/scripts/product/index-react.phtml
+++ b/application/modules/default/views/scripts/product/index-react.phtml
@@ -56,6 +56,6 @@ var commentsJson = <?php echo $this->commentsJson ?>; // comments  TODO Paging
 var filesCntJson = <?php echo $this->filesCntJson ?>;   // Tab( active files cnt )
 var filesJson  = <?php echo $this->filesJson ?>;  // Tab files
 
-var authMemberJson = <?php echo $this->authMemberJson ?>  // authMember
+var user = <?php echo $this->authMemberJson ?>  // authMember
 </script>
 <script type="text/javascript" src="/theme/react/all.js"></script>
