--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -25,6 +25,28 @@ header div.container.header {
     overflow: hidden;
   }
 
+  .user-menu-container {
+    float: right;
+    padding: 15px;
+    height: 70px;
+    width: auto;
+
+    ul {
+      float: right;
+      width: auto;
+      padding: 0;
+      margin: 0;
+
+      li {
+
+        a {
+
+
+        }
+      }
+    }
+  }
+
   #nav-top {
 
     #nav-left {
@@ -880,6 +902,7 @@ table {
           i {
             font-size: 40px;
             color: #4a85cf;
+            .transition();
           }
 
           span {
@@ -887,10 +910,19 @@ table {
             left: 0;
             top: 0;
             width: 100%;
+            height: 100%;
             text-align: center;
             padding-top: 5px;
             font-size: 15px;
             font-weight: 500 !important;
+            cursor: pointer;
+          }
+
+          &:hover {
+
+            i {
+              color: darken(#4a85cf,5%);
+            }
           }
         }
 
