--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -828,28 +828,30 @@ $this->inlineScript()->appendScript(
             });
         }
 
-        function postPploadFiles(files) {
-            if (files) {
-                $.each(files, function () {
-                    var uploadId = 'file-upload-' + Math.floor(Math.random() * 1000) + '-' + new Date().getTime();
-                    ajaxUploads.queue[uploadId] = this;
-                    $modalPpload.find('table[data-file-upload] tbody').append(
-                        '<tr data-file-upload-id="' + uploadId + '">'
-                        + '<td>' + this.name + ' (' + humanFileSize(this.size) + ')</td>'
-                        + '<td>'
-                        + '<progress max="100" value="0" data-file-upload-progress=""></progress>'
-                        + '<br>'
-                        + '<span'
-                        + ' data-file-upload-progress=""'
-                        + ' data-file-upload-loaded="0"'
-                        + ' data-file-upload-time="0"></span>'
-                        + '</td>'
-                        + '<td><a href="#" data-file-upload-cancel-btn="">×</a></td>'
-                        + '</tr>'
-                    );
-                });
-            }
+        function addFileUploadQueue(fileId, fileUpload) {
+            var uploadId = 'file-upload-' + Math.floor(Math.random() * 1000) + '-' + new Date().getTime();
+            ajaxUploads.queue[uploadId] = {
+                fileId: fileId,
+                fileUpload: fileUpload
+            };
 
+            $modalPpload.find('table[data-file-upload] tbody').append(
+                '<tr data-file-upload-id="' + uploadId + '">'
+                + '<td>' + this.name + ' (' + humanFileSize(this.size) + ')</td>'
+                + '<td>'
+                + '<progress max="100" value="0" data-file-upload-progress=""></progress>'
+                + '<br>'
+                + '<span'
+                + ' data-file-upload-progress=""'
+                + ' data-file-upload-loaded="0"'
+                + ' data-file-upload-time="0"></span>'
+                + '</td>'
+                + '<td><a href="#" data-file-upload-cancel-btn="">×</a></td>'
+                + '</tr>'
+            );
+        }
+
+        function startPostPploadFiles() {
             if ($.isEmptyObject(ajaxUploads.queue) || ajaxUploads.uploading) {
                 return;
             }
@@ -859,7 +861,10 @@ $this->inlineScript()->appendScript(
             var formData = new FormData();
             $.each(ajaxUploads.queue, function (key, value) {
                 uploadId = key;
-                formData.append('file_upload', value);
+                if (value.fileId) {
+                    formData.append('file_id', value.fileId);
+                }
+                formData.append('file_upload', value.fileUpload);
                 return false;
             });
             var $uploadContainer = $modalPpload.find('tr[data-file-upload-id="' + uploadId + '"]');
@@ -872,6 +877,13 @@ $this->inlineScript()->appendScript(
             $modalPpload.find('button[data-file-upload-cancel-btn]').removeAttr('disabled');
 
             ajaxUploads.currentUploadId = uploadId;
+
+            var url = '';
+            if (formData.has('file_id')) {
+                url = $modalPpload.attr('data-updatepploadfile-uri');
+            } else {
+                url = $modalPpload.attr('data-addpploadfile-uri');
+            }
 
             ajaxUploads.uploading = $.ajax({
                 xhr: function () {
@@ -902,11 +914,11 @@ $this->inlineScript()->appendScript(
                         }
                         $modalPpload.find('button[data-file-upload-ok-btn]').removeAttr('disabled');
                         $modalPpload.find('button[data-file-upload-cancel-btn]').attr('disabled', 'disabled');
-                        postPploadFiles();
+                        startPostPploadFiles();
                     }, false);
                     return xhr;
                 },
-                url: $modalPpload.attr('data-addpploadfile-uri'),
+                url: url,
                 type: 'POST',
                 data: formData,
                 dataType: 'json',
@@ -1007,7 +1019,7 @@ $this->inlineScript()->appendScript(
                     $modalPpload.find('button[data-deletepploadfiles-btn]').removeAttr('disabled');
                     $modalPpload.find('button[data-file-upload-ok-btn]').removeAttr('disabled');
                     $modalPpload.find('button[data-file-upload-cancel-btn]').attr('disabled', 'disabled');
-                    postPploadFiles();
+                    startPostPploadFiles();
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
                     alert("Error: " + textStatus + ", " + errorThrown);
@@ -1278,12 +1290,18 @@ $this->inlineScript()->appendScript(
 
         $modalPpload.on('drop', 'div[data-file-upload]', function (event) {
             event.preventDefault();
-            postPploadFiles(event.originalEvent.dataTransfer.files);
+            $.each(event.originalEvent.dataTransfer.files, function () {
+                addFileUploadQueue('', this);
+            });
+            startPostPploadFiles();
             $(this).css('border-color', '#cccccc');
         });
 
         $modalPpload.on('change', 'input[data-file-upload]', function (event) {
-            postPploadFiles(this.files);
+            $.each(this.files, function () {
+                addFileUploadQueue('', this);
+            });
+            startPostPploadFiles();
         });
 
         $modalPpload.on('click', 'button[data-addpploadfile-btn]', function (event) {
