--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -851,7 +851,7 @@ $this->inlineScript()->appendScript(
             );
         }
 
-        function startPostPploadFiles() {
+        function startUploadPploadFiles() {
             if ($.isEmptyObject(ajaxUploads.queue) || ajaxUploads.uploading) {
                 return;
             }
@@ -914,7 +914,7 @@ $this->inlineScript()->appendScript(
                         }
                         $modalPpload.find('button[data-file-upload-ok-btn]').removeAttr('disabled');
                         $modalPpload.find('button[data-file-upload-cancel-btn]').attr('disabled', 'disabled');
-                        startPostPploadFiles();
+                        startUploadPploadFiles();
                     }, false);
                     return xhr;
                 },
@@ -1019,7 +1019,7 @@ $this->inlineScript()->appendScript(
                     $modalPpload.find('button[data-deletepploadfiles-btn]').removeAttr('disabled');
                     $modalPpload.find('button[data-file-upload-ok-btn]').removeAttr('disabled');
                     $modalPpload.find('button[data-file-upload-cancel-btn]').attr('disabled', 'disabled');
-                    startPostPploadFiles();
+                    startUploadPploadFiles();
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
                     alert("Error: " + textStatus + ", " + errorThrown);
@@ -1293,7 +1293,7 @@ $this->inlineScript()->appendScript(
             $.each(event.originalEvent.dataTransfer.files, function () {
                 addFileUploadQueue('', this);
             });
-            startPostPploadFiles();
+            startUploadPploadFiles();
             $(this).css('border-color', '#cccccc');
         });
 
@@ -1301,7 +1301,7 @@ $this->inlineScript()->appendScript(
             $.each(this.files, function () {
                 addFileUploadQueue('', this);
             });
-            startPostPploadFiles();
+            startUploadPploadFiles();
         });
 
         $modalPpload.on('click', 'button[data-addpploadfile-btn]', function (event) {
