Set null instead of blank string

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -1351,8 +1351,6 @@ $this->inlineScript()->appendScript('
                     return size;
                 }
 
-
-                //event.preventDefault();
                 $modalPpload.attr('data-ppload-collection-id', $(this).attr('data-ppload-collection-id'));
                 $modalPpload.attr('data-product-id', $(this).attr('data-product-id'));
                 $modalPpload.attr('data-addpploadfile-uri', $(this).attr('data-addpploadfile-uri'));
@@ -1401,7 +1399,7 @@ $this->inlineScript()->appendScript('
                 $modalPpload.on('drop', 'div[data-file-upload]', function (event) {
                     event.preventDefault();
                     $.each(event.originalEvent.dataTransfer.files, function () {
-                        addFileToPploadUploadQueue('', this);
+                        addFileToPploadUploadQueue(null, this);
                     });
                     startUploadPploadFiles();
                     $(this).css('border-color', '#cccccc');
@@ -1409,7 +1407,7 @@ $this->inlineScript()->appendScript('
 
                 $modalPpload.on('change', 'input[data-file-upload]', function (event) {
                     $.each(this.files, function () {
-                        addFileToPploadUploadQueue('', this);
+                        addFileToPploadUploadQueue(null, this);
                     });
                     startUploadPploadFiles();
                 });
@@ -1420,13 +1418,10 @@ $this->inlineScript()->appendScript('
                 });
 
                 $modalPpload.on('click', 'input[data-accept-checkbox]', function (event) {
-
                     if ($modalPpload.find('input[data-accept-checkbox]').is(':checked')) {
-                        //event.preventDefault();
                         $modalPpload.find('button[data-addpploadfile-btn]').removeAttr('disabled');
                         $modalPpload.find('#github_picker').removeAttr('disabled');
                     } else {
-                        //event.preventDefault();
                         $modalPpload.find('button[data-addpploadfile-btn]').attr('disabled', 'disabled');
                         $modalPpload.find('#github_picker').attr('disabled', 'disabled');
                     }
