--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -889,6 +889,17 @@ table {
         top: 39px;
         right: 0;
 
+        #likes-container {
+
+          &.liked-by-user {
+            .likes {
+              span {
+                color: white;
+              }
+            }
+          }
+        }
+
         .likes {
           float: right;
           width: 40px;
