--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -21,7 +21,7 @@
  **/
 
 $this->headLink()->appendStylesheet('/theme/flatui/css/stylesheets/general.css');
- $this->headLink()->appendStylesheet('/theme/flatui/css/select2.min.css');
+$this->headLink()->appendStylesheet('/theme/flatui/css/select2.min.css');
 $this->headLink()->appendStylesheet('/theme/flatui/css/select2.custmized.css');
 $this->inlineScript()->appendFile('/theme/flatui/js/lib/select2.min.js');
 $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
@@ -372,6 +372,7 @@ $this->inlineScript()->appendScript(
             </div>
             <div class="modal-body">
                 <input type="file" style="display: none;" data-file-upload="" multiple>
+                <input type="file" style="display: none;" data-file-upload-update="" data-ppload-file-id="">
 
                 <p data-file-upload-msg=""><?= $this->translate('Drop file(s) here') ?>:</p>
 
@@ -382,7 +383,6 @@ $this->inlineScript()->appendScript(
                             <th><?= $this->translate('Filename') ?></th>
                             <th><?= $this->translate('Version') ?></th>
                             <th><?= $this->translate('Description') ?></th>
-
                             <!--<th><?= $this->translate('License') ?></th>-->
                             <th><?= $this->translate('Filetype') ?></th>
                             <th><?= $this->translate('Packagetype') ?></th>
@@ -390,7 +390,7 @@ $this->inlineScript()->appendScript(
                             <th><?= $this->translate('Date added') ?></th>
                             <th style="text-align: right"><?= $this->translate('Filesize') ?></th>
                             <th style="text-align: right"><?= $this->translate('# of Downloads') ?></th>
-
+                            <th></th>
                             <th></th>
                         </tr>
                         </thead>
@@ -907,6 +907,9 @@ $this->inlineScript()->appendScript(
                         }, false);
                     }
                     xhr.addEventListener('abort', function (event) {
+                        if (pploadUploads.queue[uploadId].fileId) {
+                            $modalPpload.find('tr[data-ppload-file-id="' + pploadUploads.queue[uploadId].fileId + '"]').show();
+                        }
                         delete pploadUploads.queue[uploadId];
                         pploadUploads.currentUploadId = null;
                         pploadUploads.uploading = null;
@@ -929,6 +932,10 @@ $this->inlineScript()->appendScript(
                 success: function (data, textStatus, jqXHR) {
                     if (data.status != 'ok') {
                         return;
+                    }
+
+                    if (pploadUploads.queue[uploadId].fileId) {
+                        $modalPpload.find('tr[data-ppload-file-id="' + pploadUploads.queue[uploadId].fileId + '"]').remove();
                     }
                     delete pploadUploads.queue[uploadId];
                     pploadUploads.currentUploadId = null;
@@ -1012,6 +1019,7 @@ $this->inlineScript()->appendScript(
                         + '<td>' + data.file.created_timestamp + '</td>'
                         + '<td style="text-align: right">' + humanFileSize(data.file.size) + '</td>'
                         + '<td style="text-align: right">0</td>'
+                        + '<td><a href="#" class="btn btn-native btn-xs btn-file-dropzone" data-updatepploadfile-btn="">Update</a></td>'
                         + '<td><a href="#" class="btn btn-native btn-xs btn-file-dropzone" data-deletepploadfile-btn=""><span class="glyphicon glyphicon-trash"></span></a></td>'
                         + '</tr>'
                     );
@@ -1309,6 +1317,22 @@ $this->inlineScript()->appendScript(
         $modalPpload.on('click', 'button[data-addpploadfile-btn]', function (event) {
             event.preventDefault();
             $modalPpload.find('input[data-file-upload]').click();
+        });
+
+        $modalPpload.on('change', 'input[data-file-upload-update]', function (event) {
+            if ($(this).attr('data-ppload-file-id')) {
+                var fileId = $(this).attr('data-ppload-file-id');
+                $modalPpload.find('tr[data-ppload-file-id="' + fileId + '"]').hide();
+                addFileToPploadUploadQueue(fileId, this.files[0]);
+                startUploadPploadFiles();
+            }
+        });
+
+        $modalPpload.on('click', 'tr[data-ppload-file-id] a[data-updatepploadfile-btn]', function (event) {
+            event.preventDefault();
+            var $inputForm = $modalPpload.find('input[data-file-upload-update]');
+            $inputForm.attr('data-ppload-file-id', $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id'));
+            $inputForm.click();
         });
 
         $modalPpload.on('click', 'input[data-accept-checkbox]', function (event) {
